--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,10 +7,13 @@
                 {{ post.published_date }}
             </div>
         {% endif %}
-        {% if user.is_authenticated %}
-            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-        {% endif %}
+        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
+        <a class="btn btn-default" href="{%url 'post_like' pk=post.pk %}">Like!</a>
+        <a class="btn btn-default" href="{%url 'post_dislike' pk=post.pk %}">Dislike</a>
+        <h2>Likes -  {{ post.likes }}</h2>
+        <hr>
+        <h2>Dislikes - {{ post.dislikes }}</h2>
     </div>
 {% endblock %}
